feat(maa): revert temporary fix
The bug is fixed in maa-cli, so we can revert the temporary fix.

--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -61,8 +61,7 @@ type = "Mall"
 [tasks.params]
 shopping = true
 credit_fight = true
-# buy_first = ["招聘许可", "龙门币"]
-buy_first = ["招聘许可"]            # This is temporary fix for maa-cli#68
+buy_first = ["招聘许可", "龙门币"]
 blacklist = ["碳", "家具", "加急许可"]
 [[tasks.variants]]
 condition = { type = "Time", start = "18:00:00" }
