feat: ask for medicine number in fight task

--- a/.config/maa/tasks/fight.toml
+++ b/.config/maa/tasks/fight.toml
@@ -6,12 +6,16 @@ params = { client_type = "Official", start_game_enabled = true }
 #------------------------------ Fight -----------------------------#
 [[tasks]]
 type = "Fight"
+
 [tasks.params]
-expiring_medicine = 3
 report_to_penguin = true
 penguin_id = "084310065"
 
 [[tasks.variants]]
+[tasks.variants.params.medicine]
+default = 0
+description = "number of medicine to use"
+
 [tasks.variants.params.stage]
 default = "1-7"
 description = "a stage to fight"
