feat(maa): replenish originium shard in daily task

--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -13,6 +13,7 @@ mode = 10000
 facility = ["Trade", "Reception", "Mfg", "Control", "Power", "Office", "Dorm"]
 dorm_trust_enabled = true
 filename = "gacha.json"
+replenish = true
 
 [[tasks.variants]]
 condition = { type = "Time", end = "12:00:00" }
