--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -52,8 +52,8 @@ conditions = [
 params = { stage = "1-7" }
 
 [[tasks.variants]]
-params = { stage = "CV-7" }
-condition = { type = "DateTime", start = "2023-09-05T16:00:00", end = "2023-09-19T03:59:59" }
+params = { stage = "ZT-8" }
+condition = { type = "DateTime", start = "2023-11-01T16:00:00", end = "2023-11-21T03:59:59" }
 
 #------------------------------ Mall ------------------------------#
 # Mall after 18:00
