feat(julia): don't use julia-lsp installed by mason
It's not working well, so I'm going to install it in `nvim-lspconfig`
julia environment.

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@
 !/.julia
 /.julia/*
 !/.julia/config
+!/.julia/environments
+/.julia/environments/v*
+Manifest.toml
 
 # hammerspoon
 !/.hammerspoon
