feat(nvim): ignore lazy-lock.json
It's annoying to have to commit this file every time I update my plugins.

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ Manifest.toml
 !/.config/nvim/**
 # The minimal configuration is used for testing
 /.config/nvim/minimal.lua
+/.config/nvim/lazy-lock.json
 
 # Kitty
 !/.config/kitty
