--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -49,8 +49,8 @@ conditions = [
 ]
 
 [[tasks.variants]]
-params = { stage = "RS-7" }
-condition = { type = "DateTime", start = "2023-12-05T16:00:00", end = "2023-12-19T03:59:59" }
+params = { stage = "FC-5" }
+condition = { type = "DateTime", start = "2023-12-22T16:00:00", end = "2024-01-01T03:59:59" }
 
 #============================= Fight 2 ============================#
 [[tasks]]
