fix(kitty): add ~/.local/bin to PATH

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1445,7 +1445,7 @@ allow_remote_control socket-only
 #: The value of VAR2 will be <path to home directory>/a/b.
 
 env TERM_PROGRAM=Kitty
-env PATH=/opt/homebrew/bin:/usr/local/bin:${PATH}
+env PATH=${HOME}/.local/bin:/opt/homebrew/bin:/usr/local/bin:${PATH}
 
 # watcher
 
