--- a/.config/maa/cli.toml
+++ b/.config/maa/cli.toml
@@ -1,5 +1,8 @@
 "$schema" = "https://github.com/MaaAssistantArknights/maa-cli/raw/main/maa-cli/schemas/cli.schema.json"
 
+[cli]
+channel = "Alpha"
+
 [resource]
 # auto_update = true
 backend = "libgit2"
