--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -16,7 +16,7 @@ filename = "normal.json"
 replenish = true
 
 [[tasks.variants]]
-condition = { type = "Time", start = "7:00:00", end = "13:00:00" }
+condition = { type = "Time", start = "07:00:00", end = "13:00:00" }
 params = { plan_index = 1 }
 
 [[tasks.variants]]
@@ -51,7 +51,7 @@ conditions = [
 
 [[tasks.variants]]
 params = { stage = "FC-6" }
-condition = { type = "DateTime", start = "2023-12-22T16:00:00", end = "2024-01-01T03:59:59" }
+condition = { type = "OnSideStory", client = "Official" }
 
 #============================= Fight 2 ============================#
 [[tasks]]
