--- a/.config/maa/infrast/normal.yaml
+++ b/.config/maa/infrast/normal.yaml
@@ -25,7 +25,7 @@ plans:
           operators: [红云, 帕拉斯, 刻俄柏]
           sort: true
         - product: Battle Record
-          operators: [断罪者, 食铁兽, 红豆]
+          operators: [断罪者, 食铁兽, 槐琥]
       power:
         - operators: [Lancet-2]
         - operators: [澄闪]
@@ -40,7 +40,7 @@ plans:
           autofill: true
         - operators: [爱丽丝]
           autofill: true
-        - operators: []
+        - operators: [车尔尼]
           autofill: true
         - operators: []
           autofill: true
@@ -106,7 +106,7 @@ plans:
         - product: Battle Record
           operators: [水月, 香草, 杰西卡]
         - product: Battle Record
-          operators: [断罪者, 食铁兽, 红豆]
+          operators: [断罪者, 食铁兽, 槐琥]
       power:
         - operators: [格雷伊]
         - operators: [澄闪]
@@ -121,7 +121,7 @@ plans:
           autofill: true
         - operators: [爱丽丝]
           autofill: true
-        - operators: []
+        - operators: [车尔尼]
           autofill: true
         - operators: []
           autofill: true
