--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -387,7 +387,7 @@ modify_font cell_height 1px
 
 # url_color #0087bd
 # url_style curly
-url_style straight 
+url_style straight
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed.
@@ -488,7 +488,7 @@ url_style straight
 #: clicks (in seconds). Negative numbers will use the system default
 #: instead, if available, or fallback to 0.5.
 
-# focus_follows_mouse no
+focus_follows_mouse yes
 
 #: Set the active window to the window under the mouse when moving the
 #: mouse around.
