feat(kitty): Cmd+F to show scrollback in pager

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -330,7 +330,7 @@ modify_font cell_height 1px
 #: set to 0 if there is no cursor, for example, when showing the last
 #: command output.
 
-# scrollback_pager_history_size 0
+scrollback_pager_history_size 10
 
 #: Separate scrollback history size (in MB), used only for browsing
 #: the scrollback buffer with pager. This separate buffer is not
@@ -1783,6 +1783,7 @@ term xterm-256color
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
 # kitty_mod ctrl+shift
+kitty_mod cmd
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
@@ -1915,6 +1916,7 @@ term xterm-256color
 #: Browse scrollback buffer in pager
 
 # map kitty_mod+h show_scrollback
+map kitty_mod+f show_scrollback
 
 #::  You can pipe the contents of the current screen and history
 #::  buffer as STDIN to an arbitrary program using launch --stdin-
