fix(maa): rename and use correct config for mac
There are some issues about screen capture
if we use the `CompatPOSIXShell` config on macOS.

--- a/.config/maa/profiles/mac-avd.toml
+++ b/.config/maa/profiles/mac-avd.toml
@@ -2,7 +2,7 @@
 
 [connection]
 address = "127.0.0.1:5555"
-config = "CompatPOSIXShell"
+config = "CompatMac"
 
 [instance_options]
 touch_mode = "MaaTouch"
