--- a/.config/maa/profiles/mac-avd.toml
+++ b/.config/maa/profiles/mac-avd.toml
@@ -1,6 +1,7 @@
 "$schema" = "https://github.com/MaaAssistantArknights/maa-cli/raw/main/maa-cli/schemas/asst.schema.json"
 
 [connection]
+adb_path = "~/Library/Android/sdk/platform-tools/adb"
 address = "127.0.0.1:5555"
 config = "CompatMac"
 
