feat(starship): set command_timeout to 100

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -24,6 +24,8 @@ $cmd_duration$time\
 """
 add_newline = true
 
+command_timeout = 100
+
 # Modules
 # General {{{
 # hostname and localip always show together, only on ssh
