feat(maa): mall at morning instead of night

--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -72,7 +72,7 @@ condition = { type = "Weekday", weekdays = ["Sun"] }
 params = { stage = "1-7", series = 3 }
 
 #------------------------------ Mall ------------------------------#
-# Mall after 18:00
+# Mall before 7:00
 [[tasks]]
 type = "Mall"
 [tasks.params]
@@ -82,10 +82,9 @@ select_formation = 4
 buy_first = ["招聘许可", "龙门币"]
 blacklist = ["碳", "家具", "加急许可"]
 [[tasks.variants]]
-condition = { type = "Time", start = "17:00:00" }
+condition = { type = "Time", start = "07:00:00" }
 
 #----------------------------- Recruit ----------------------------#
-# Recruit after 18:00
 [[tasks]]
 type = "Recruit"
 
