fix(maa): add something in params of fallback variant
If params is empty, it will be parsed as an input.
This is a bug of maa-cli, but I can't fix it now.

--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -86,7 +86,7 @@ condition = { type = "Time", end = "07:00:00" }
 params = { credit_fight = true, select_formation = 4 }
 
 [[tasks.variants]]
-params = {}
+params = { shopping = true }
 
 #----------------------------- Recruit ----------------------------#
 [[tasks]]
