--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,7 +33,7 @@ bold_italic_font Victor Mono Bold Italic
 
 #: Font size (in pts)
 
-font_size 12.0
+font_size 12.5
 
 # force_ltr no
 
@@ -173,6 +173,7 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A2,U+E0B0
 #:     modify_font strikethrough_position 2px
 
 modify_font underline_position 3
+modify_font underline_thickness 150%
 
 #: Additionally, you can modify the size of the cell in which each
 #: font glyph is rendered and the baseline at which the glyph is
@@ -182,7 +183,7 @@ modify_font underline_position 3
 #:     modify_font cell_height -2px
 #:     modify_font baseline 3
 
-modify_font cell_height 1px
+modify_font cell_height -1px
 
 #: Note that modifying the baseline will automatically adjust the
 #: underline and strikethrough positions by the same amount.
