chore(maa): update daily tasks

--- a/.config/maa/tasks/daily.toml
+++ b/.config/maa/tasks/daily.toml
@@ -3,7 +3,6 @@
 type = "StartUp"
 params = { client_type = "Official", start_game_enabled = true }
 
-
 #----------------------------- Infrast ----------------------------#
 [[tasks]]
 type = "Infrast"
@@ -55,7 +54,7 @@ expiring_medicine = 1000
 # On any side story open, fight given side story stage
 [[tasks.variants]]
 condition = { type = "OnSideStory", client = "Official" }
-params = { stage = "DT-6" }
+params = { stage = "GO-8" }
 
 # Otherwise, fight PR-A-2 on Monday, PR-B-2 on Tuesday, PR-D-2 on Wednesday,
 # PR-C-1 on Thursday, 1-7 for the rest of the week
