--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -92,6 +92,12 @@
       "format_on_save": "on",
       "formatter": [
         {
+          "code_actions": {
+            "source.organizeImports.ruff": true,
+            "source.fixAll.ruff": true
+          }
+        },
+        {
           "language_server": {
             "name": "ruff"
           }
