feat(zed): only disable pyright for python
There are some trouble for pyright to find packages. So I want to
disable it. But pylsp is fine now.

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -88,7 +88,7 @@
         "coloring": "indent_aware",
         "background_coloring": "indent_aware"
       },
-      "language_servers": ["ruff"],
+      "language_servers": ["!pyright", "..."],
       "format_on_save": "on",
       "formatter": [
         {
